--- a/src/components/ExerciseSection/ExerciseSection.css
+++ b/src/components/ExerciseSection/ExerciseSection.css
@@ -1,6 +1,11 @@
+.all-sections{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
 .all-card{
   margin: 50px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 15px;
 }
+
